1999-03-12    <stanton@GASPODE>

	* generic/tcl.h: Changed magic number so it doesn't match the plus
	patch, at Jan's request.

1999-03-11    <stanton@GASPODE>

	* unix/tclConfig.sh.in:
	* unix/dltest/Makefile.in:
	* unix/dltest/configure.in:
	* unix/dltest/pkga.c:
	* unix/dltest/pkgb.c:
	* unix/dltest/pkgc.c:
	* unix/dltest/pkgd.c:
	* unix/dltest/pkge.c:
	* unix/dltest/pkgf.c: Changed package tests to build against the
	stubs library.

1999-03-10    <stanton@GASPODE>

	* generic/tclAlloc.c: Changed TCL_NATIVE_MALLOC to USE_TCLALLOC so
	it matches 8.1.
	
	* generic/tclBasic.c:
	* generic/tcl.h: 
	* generic/tcl.decls: Changed Tcl_ReleaseType from an enum to
	macros so it can be used in .rc files.
	Added Tcl_GetString.

	* unix/Makefile.in: Added compat binaries to the stub library.
	Changed compat binaries to always compile with shared flags since
	they need to be shared for the stub library.

1999-03-10    <redman@scriptics.com>

	* generic/tcl.h:
	* generic/tclBasic.c: Add Tcl_GetVersion() to public C API to
	allow checking of the Tcl library's version number at runtime.
	
1999-03-09    <stanton@GASPODE>

	* generic/tcl.h: Changed TCL_STUB_MAGIC back to match plus patch 
        implementation.

	* Regenerated stub interfaces.
	
	* tools/genStubs.tcl: Reorganized code to support mixed generic
	and platform specific tables. 

	* generic/tclInt.decls: Removed TclCompile*Cmd routines from the
	table.

	* generic/tcl.decls: Moved old Unix fd handler routines into
	generic table and modified stubs ordering to match the plus patch.

	* win/tclWinChan.c (FileSeekProc): Fixed bug where errors during
	seeking were not getting propagated.

1999-03-08    <stanton@GASPODE>

	* generic/tclDecls.h:
	* generic/tclStubs.c:
	* generic/tclStubInit.c:
	* generic/tcl.decls: Removed Tcl_InitMemory().

	* generic/tcl.h: Changed TCL_STUB_MAGIC to break binary
	compatibility with plus patch version, since the tables don't
	match. 

1999-03-08    <stanton@GASPODE>

	* win/tclWinInt.h: