@@ -30,5 +30,4 @@ AC_SUBST(TCL_PATCH_LEVEL)
 AC_SUBST(TCL_SRC_DIR)
 AC_SUBST(TCL_BIN_DIR)
 
-AC_OUTPUT(Makefile)
-AC_OUTPUT(tcl.hpj)
+AC_OUTPUT(tcl.hpj Makefile)
