@@ -3740,3 +3740,5 @@ panic. (stanton)
 extension" so that it splits at the last period.  Now the extension of
 a file like "foo..o" is ".o" instead of "..o" as in previous versions. 
 *** POTENTIAL INCOMPATIBILITY ***
+
+----------------- Released 8.0.5, 3/9/99 -----------------------
